--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jszip": "^3.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
